# FileStorage

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  setup.cfg
fstorage/: main.py
fstorage/api/: __init__.py  file.py  files.py
fstorage/config/: .env.example  __init__.py  config.py
fstorage/config/db/: db_helper.py
fstorage/dependencies/: file.py
fstorage/exceptions/: exceptions.py
fstorage/models/: __init__.py  base.py  file.py
fstorage/repositories/: file.py  repository.py
fstorage/schemas/: file.py
fstorage/services/: file.py
fstorage/storage/: minio.py  storage.py
migrations/: env.py
migrations/versions/: 2025_03_08_1426-1c890954ad50_add_files_table.py  2025_03_10_0932-dce60856fb03_fixed_typo_in_field_names.py
src/config/: __init__.py  config.py
src/models/: __init__.py  base.py  file.py
src/services/: s3storage.py
src/storage/: minio.py  storage.py
