[project]
name = "fstorage"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "karaberov.ivan@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)"
]

[tool.poetry]
packages = [{include = "fstorage", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
